--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       margin: 30px auto;
       perspective: 1500px;
       position: relative;
+margin-bottom: 40px;
+
+
     }
     .page {
       width: 100%;
@@ -69,6 +72,12 @@
       padding: 5px 0;
       display: none;
     }
+.controls {
+  text-align: center;
+  margin-top: 10px;
+  position: relative;
+  z-index: 9999;
+}
   </style>
 </head>
 <body>
