--- a/index.html
+++ b/index.html
@@ -6,65 +6,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#ffffff">
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    h1 { text-align: center; padding: 20px; }
-    #searchBox { width: 250px; padding: 8px; }
+    h1 { text-align: center; padding: 15px; font-size: 20px; }
+    #searchBox { width: 70%; max-width: 300px; padding: 8px; }
     #results { margin: 10px auto; width: 90%; max-width: 600px; }
     .result { border: 1px solid #ccc; padding: 8px; margin-bottom: 8px; cursor: pointer; background: #fff; }
     .result:hover { background: #eef; }
     .error { color: #b00020; font-weight: bold; }
 
-    /* Flipbook container */
     .flipbook {
-      width: 800px;
-      height: 500px;
+      width: 100%;
+      max-width: 600px;
       margin: 20px auto;
       position: relative;
-      perspective: 2000px;
-      background: #ddd;
-      overflow: hidden;
     }
 
     .page {
       width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0; left: 0;
       background: white;
-      box-shadow: 0 0 8px rgba(0,0,0,0.3);
-      transform-origin: right center;
-      transition: transform 1s ease;
-      backface-visibility: hidden;
+      box-shadow: 0 0 6px rgba(0,0,0,0.2);
+      margin-bottom: 15px;
+      text-align: center;
     }
 
-    .page img { width: 100%; height: 100%; object-fit: contain; }
-
-    .page.flipped {
-      transform: rotateY(-180deg);
-      z-index: 0;
+    .page img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
 
     .controls {
       text-align: center;
-      margin: 20px;
-      position: relative;
-      z-index: 9999;
+      margin: 15px;
     }
 
-    .qr-badge {
-      border: 2px solid #333;
-      border-radius: 12px;
-      padding: 20px;
-      width: 280px;
-      margin: 30px auto;
-      text-align: center;
-      background: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    @media (max-width: 600px) {
+      h1 { font-size: 18px; }
+      #searchBox { width: 90%; }
     }
-    .qr-badge h3 { margin-bottom: 15px; font-size: 18px; color: #222; }
-    .qr-badge .caption { margin-top: 10px; font-size: 14px; color: #555; font-style: italic; }
   </style>
 </head>
 <body>
@@ -83,19 +63,13 @@
     <button onclick="nextPage()">Next ▶</button>
   </div>
 
-  <div class="qr-badge">
-    <h3>📖 Scan to Open Directory</h3>
-    <div id="qrcode"></div>
-    <p class="caption">77 Series Association Member's Directory</p>
-  </div>
-
   <script>
     let data = [];
     let currentPage = 0;
 
     fetch('index.json')
       .then(r => r.json())
-      .then(json => { data = json; renderBook(); initQR(); });
+      .then(json => { data = json; renderBook(); });
 
     function renderBook() {
       const flipbook = document.getElementById('flipbook');
@@ -122,21 +96,13 @@
       const page = document.createElement('div');
       page.className = 'page';
       page.innerHTML = `<img src="${imgPath}" alt="${title}">`;
-      page.addEventListener('click', e => {
-        const rect = page.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        if (x > rect.width * 0.7) nextPage();
-        else if (x < rect.width * 0.3) prevPage();
-      });
       document.getElementById('flipbook').appendChild(page);
     }
 
     function showPage(index) {
       const pages = document.querySelectorAll('.page');
       pages.forEach((p, i) => {
-        p.style.zIndex = pages.length - i;
-        if (i < index) p.classList.add('flipped');
-        else p.classList.remove('flipped');
+        p.style.display = (i === index) ? 'block' : 'none';
       });
       currentPage = index;
     }
@@ -187,16 +153,6 @@
           document.getElementById('flipbook').scrollIntoView({ behavior: 'smooth' });
         };
         resultsDiv.appendChild(item);
-      });
-    }
-
-    function initQR() {
-      const url = window.location.href;
-      QRCode.toCanvas(url, { width: 180 }, function (error, canvas) {
-        if (error) console.error(error);
-        const qrDiv = document.getElementById('qrcode');
-        qrDiv.innerHTML = '';
-        qrDiv.appendChild(canvas);
       });
     }
   </script>
