--- a/index.html
+++ b/index.html
@@ -6,96 +6,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    h1 { text-align: center; padding: 15px; font-size: 20px; }
-    #searchBox { width: 70%; max-width: 300px; padding: 8px; }
-    #results { margin: 10px auto; width: 90%; max-width: 600px; }
+    h1 { text-align: center; padding: 14px 10px; font-size: 20px; }
+    .bar { text-align: center; }
+    #searchBox { width: 72%; max-width: 360px; padding: 8px; }
+    #results { margin: 10px auto 0; width: 92%; max-width: 720px; }
     .result { border: 1px solid #ccc; padding: 8px; margin-bottom: 8px; cursor: pointer; background: #fff; }
     .result:hover { background: #eef; }
     .error { color: #b00020; font-weight: bold; }
 
-    .viewer {
+    .embed-wrap { width: 100%; max-width: 1200px; margin: 16px auto; }
+    iframe.fp-iframe {
+      border: 1px solid lightgray;
       width: 100%;
-      max-width: 600px;
-      margin: 20px auto;
-      text-align: center;
-    }
-
-    .viewer img {
-      width: 100%;
-      height: auto;
-      box-shadow: 0 0 6px rgba(0,0,0,0.2);
-      transition: opacity 0.5s ease;
-    }
-
-    .controls {
-      text-align: center;
-      margin: 15px;
+      height: 400px; /* adjust as needed */
+      display: block;
     }
 
     @media (max-width: 600px) {
       h1 { font-size: 18px; }
-      #searchBox { width: 90%; }
+      #searchBox { width: 92%; }
+      iframe.fp-iframe { height: 420px; }
     }
   </style>
 </head>
 <body>
   <h1>77 Series Association Member's Directory</h1>
 
-  <div style="text-align:center;">
+  <div class="bar">
     <input id="searchBox" type="text" placeholder="Enter Roll or Nickname">
     <button onclick="doSearch()">Search</button>
   </div>
   <div id="results"></div>
 
-  <div class="viewer">
-    <img id="pageImage" src="" alt="Page">
-  </div>
-
-  <div class="controls">
-    <button onclick="prevPage()">◀ Prev</button>
-    <button onclick="nextPage()">Next ▶</button>
+  <div class="embed-wrap">
+    <iframe allowfullscreen allow="clipboard-write" scrolling="no"
+            class="fp-iframe"
+            src="https://heyzine.com/flip-book/26231c7492.html"></iframe>
   </div>
 
   <script>
+    // Load your index.json (expects fields like: roll, nickname, page)
     let data = [];
-    let currentPage = 0;
-    let pages = [];
-
     fetch('index.json')
       .then(r => r.json())
-      .then(json => { data = json; buildPages(); showPage(0); });
+      .then(json => { data = json; });
 
-    function buildPages() {
-      pages = [];
-      // Static pages
-      pages.push({id:"cover", src:"pages/cover.jpg"});
-      pages.push({id:"intro", src:"pages/intro.jpg"});
-      // Profile pages
-      data.forEach(entry => {
-        pages.push({id:String(entry.page), src:`pages/page${entry.page}.jpg`});
-      });
-      // Extras
-      pages.push({id:"extra1", src:"pages/extra1.jpg"});
-      pages.push({id:"extra2", src:"pages/extra2.jpg"});
-    }
-
-    function showPage(index) {
-      if (index < 0 || index >= pages.length) return;
-      currentPage = index;
-      const img = document.getElementById('pageImage');
-      img.style.opacity = 0;
-      setTimeout(() => {
-        img.src = pages[index].src;
-        img.style.opacity = 1;
-      }, 200);
-    }
-
-    function nextPage() {
-      if (currentPage < pages.length - 1) showPage(currentPage + 1);
-    }
-
-    function prevPage() {
-      if (currentPage > 0) showPage(currentPage - 1);
+    // Optional: If Heyzine page numbering differs, tune this mapping.
+    // For a constant offset, set OFFSET = (heyzinePage - internalPage).
+    const OFFSET = 0;
+    function toHeyzinePage(internalPage) {
+      // If you later add heyzinePage to entries, prefer that:
+      // return entry.heyzinePage ?? (Number(internalPage) + OFFSET);
+      return Number(internalPage) + OFFSET;
     }
 
     function doSearch() {
@@ -118,18 +80,26 @@
         return;
       }
 
+      const iframe = document.querySelector('iframe.fp-iframe');
       matches.forEach(entry => {
         const item = document.createElement('div');
         item.className = 'result';
-        item.innerHTML = `<strong>Roll:</strong> ${entry.roll} | 
-                          <strong>Nickname:</strong> ${entry.nickname} | 
+        item.innerHTML = `<strong>Roll:</strong> ${entry.roll} |
+                          <strong>Nickname:</strong> ${entry.nickname} |
                           <strong>Page:</strong> ${entry.page}`;
         item.onclick = () => {
-          const target = pages.findIndex(p => p.id == entry.page);
-          if (target >= 0) {
-            showPage(target);
-            document.querySelector('.viewer').scrollIntoView({ behavior: 'smooth' });
-          }
+          // Try common deep-link patterns. If Heyzine supports one, it will open that page.
+          const targetPage = toHeyzinePage(entry.page);
+          const base = 'https://heyzine.com/flip-book/26231c7492.html';
+          // Attempt hash param
+          iframe.src = `${base}#page=${targetPage}`;
+          // Fallback small delay: attempt query param if hash isn't supported
+          setTimeout(() => {
+            if (!iframe.src.includes(`#page=${targetPage}`)) {
+              iframe.src = `${base}?page=${targetPage}`;
+            }
+          }, 300);
+          document.querySelector('.embed-wrap').scrollIntoView({ behavior: 'smooth' });
         };
         resultsDiv.appendChild(item);
       });
