--- a/index.html
+++ b/index.html
@@ -4,46 +4,168 @@
   <meta charset="UTF-8">
   <title>77 Series Association Member's Directory</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
-    h1 { text-align: center; padding: 14px 10px; font-size: 20px; }
-    .bar { text-align: center; }
-    #searchBox { width: 72%; max-width: 360px; padding: 8px; }
-    #results { margin: 10px auto 0; width: 92%; max-width: 720px; }
-    .result { border: 1px solid #ccc; padding: 8px; margin-bottom: 8px; cursor: pointer; background: #fff; }
-    .result:hover { background: #eef; }
-    .error { color: #b00020; font-weight: bold; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('images/marble-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+    }
 
-    .embed-wrap { width: 100%; max-width: 1200px; margin: 16px auto; }
+    .overlay {
+      background: rgba(0, 64, 128, 0.85); /* semi-transparent blue overlay */
+      min-height: 100vh;
+      padding-bottom: 20px;
+    }
+
+    .header {
+      text-align: center;
+      padding: 20px 10px 10px;
+    }
+
+    .header img {
+      max-height: 100px;
+      display: block;
+      margin: 0 auto 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    .header h1 {
+      font-size: 22px;
+      margin: 0;
+      color: #ffe680;
+    }
+
+    .header span {
+      font-size: 16px;
+      color: #fff;
+      font-weight: 500;
+    }
+
+    .bar {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    #searchBox {
+      padding: 10px;
+      border: 1px solid #bfa14b;
+      border-radius: 4px;
+      width: 70%;
+      max-width: 360px;
+      background: #fff;
+      color: #004080;
+    }
+
+    button {
+      background: #bfa14b;
+      color: #fff;
+      border: none;
+      padding: 10px 16px;
+      margin-left: 8px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background: #d4b060;
+    }
+
+    #results {
+      margin: 10px auto;
+      width: 92%;
+      max-width: 720px;
+    }
+
+    .result {
+      border: 1px solid #ccc;
+      padding: 8px;
+      margin-bottom: 8px;
+      cursor: pointer;
+      background: #fff;
+      color: #004080;
+      border-radius: 4px;
+    }
+
+    .result:hover {
+      background: #eef;
+    }
+
+    .error {
+      color: #ffdddd;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    /* Golden divider */
+    .gold-divider {
+      border: 0;
+      height: 2px;
+      background: linear-gradient(to right, transparent, #bfa14b, transparent);
+      margin: 20px auto;
+      max-width: 800px;
+    }
+
+    .embed-wrap {
+      width: 100%;
+      max-width: 1200px;
+      margin: 20px auto;
+      padding: 0 10px;
+    }
+
     iframe.fp-iframe {
-      border: 1px solid lightgray;
+      border: 2px solid #bfa14b;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+      border-radius: 8px;
       width: 100%;
       height: 600px;
       display: block;
     }
 
+    footer {
+      text-align: center;
+      padding: 12px;
+      background: rgba(0,0,0,0.6);
+      color: #fff;
+      font-size: 14px;
+      margin-top: 30px;
+    }
+
     @media (max-width: 600px) {
-      h1 { font-size: 18px; }
+      .header h1 { font-size: 18px; }
       #searchBox { width: 92%; }
       iframe.fp-iframe { height: 420px; }
     }
   </style>
 </head>
 <body>
-  <h1>77 Series Association Member's Directory</h1>
+  <div class="overlay">
+    <div class="header">
+      <img src="images/logo.jpeg" alt="77 Series Logo">
+      <h1>77 SERIES ASSOCIATION<br><span>Bound by Friendship</span></h1>
+    </div>
 
-  <!-- Search bar -->
-  <div class="bar">
-    <input id="searchBox" type="text" placeholder="Enter Roll or Nickname">
-    <button onclick="doSearch()">Search</button>
-  </div>
-  <div id="results"></div>
+    <div class="bar">
+      <input id="searchBox" type="text" placeholder="Enter Roll or Nickname">
+      <button onclick="doSearch()">Search</button>
+    </div>
+    <div id="results"></div>
 
-  <!-- Heyzine flipbook embed -->
-  <div class="embed-wrap">
-    <iframe allowfullscreen allow="clipboard-write" scrolling="no"
-            class="fp-iframe"
-            src="https://heyzine.com/flip-book/26231c7492.html"></iframe>
+    <hr class="gold-divider">
+
+    <div class="embed-wrap">
+      <iframe src="https://heyzine.com/flip-book/26231c7492.html"
+              class="fp-iframe" allowfullscreen></iframe>
+    </div>
+
+    <footer>
+      <p>© 2025 77 Series Association – Engineering College, Rajshahi<br>
+      <em>Heaven’s Light Is Our Guide</em></p>
+    </footer>
   </div>
 
   <script>
