--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 <body>
   <div class="overlay">
     <div class="header">
-      <img src="images/logo.jpeg" alt="77 Series Logo">
-      <h1>77 SERIES ASSOCIATION<br><span>Bound by Friendship</span></h1>
+
+      <h1>MEMBERS' DIRECTORY - 2025<br><span>77 SERIES ASSOCIATION, ECR</span></h1>
     </div>
 
     <div class="bar">
@@ -164,7 +164,7 @@
 
     <footer>
       <p>© 2025 77 Series Association – Engineering College, Rajshahi<br>
-      <em>Heaven’s Light Is Our Guide</em></p>
+      <em>Bound by Friendship</em></p>
     </footer>
   </div>
 
